# pysidecurso

./: README.md  pyproject.toml
curso/: Ui_trabajadores.py  main.py  metodos.py  tempCodeRunnerFile.py  trabajadores.db  trabajadores.ui
