[tool.poetry]
name = "curso"
version = "0.1.0"
description = ""
authors = ["CRAG66 <ogeidca49@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
PySide2 = "^5.13"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.7"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
